--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     font-size: 14px;
     color: #bfbfc2;
 "><span>过滤假量，实时统计，QQ防封</span></div>
-      <div class="input_div"><input id="input_url" type="text" placeholder="请把网址粘贴在此处" class="input-area"></br></br><input style="width:50%" id="input_name" type="text" placeholder="请把网址粘贴在此处" class="input-area"></div>
+      <div class="input_div"><input id="input_url" type="text" placeholder="请把需要防红的网址粘贴在此处" class="input-area"></br></br><input style="width:50%" id="input_name" type="text" placeholder="在qq打开防红显示的网页标题" class="input-area"></div>
       <div class="butt">一键生成, 快速分享</div>
   </div>
 </center>
