--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 							u = u.replace(/\&/g,"%E5%92%8C");
 							u = u.replace(/\?/g,"%EF%BC%9F");
 							u = u.replace(/\=/g,"%E7%AD%89");
-							input_url.value="https://0xiaoshenap.github.io/qqfanghong?t="+$("#input_name").val()+"&u="+u;
+							input_url.value="https://qqfh.rthe.xyz?t="+$("#input_name").val()+"&u="+u;
 							var copyText = $("#input_url");//获取对象
 							copyText.select();//选择
 							document.execCommand("Copy");//执行复制
